test/synth/t08.log.good
Command: Synthesize for spec t08.spec and output to t08.out, log to t08.log.raw
Fatal error: exception Failure("t08.casp:1,0-1,22: encountered 0 bit: 0 bit is forbidden!")
FAILED
